data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1882.wast
;; 3. **Test Case 3**:    - **Description**: Set up a nested block structure (e.g., a `block` within a `loop`) where the nested block expects an operand type of `i32` on the stack and uses `br_if` in the outer block to conditionally branch, potentially causing a type mismatch.    - **Constraint**: Checks that `br_if` enforces correct type transformations and unwinds the stack appropriately; tests for scenarios where type annotations are implied in WASM but need explicit handling in wizard_engine.

(assert_invalid
  (module
    (func $nested_block_br_if_type_mismatch
      (loop (block (br_if 0 (i32.const 1) (i64.const 0))))
    )
  )
  "type mismatch"
)